--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -86,6 +86,9 @@ stub.descriptors.path=
 # Extension pattern of the stub descriptor XML configuration files (it could be a specific file or *.xml)
 stub.descriptors.pattern=stubConfig.xml
 
+# Use experimental JSON configuration stub descriptors, must be 0, when it is 1, Wilma is not working properly
+stub.descriptors.experimental.json=1
+
 # Relative folder path of the cached stub descriptor XML configuration files from project root.
 stub.descriptors.cache.path=config/cache/stub_descriptors
 
