--- a/wilma-application/modules/wilma-stub-configuration-domain/build.gradle
+++ b/wilma-application/modules/wilma-stub-configuration-domain/build.gradle
@@ -22,5 +22,6 @@ dependencies {
   compile project(':wilma-application:wilma-domain')
   compile project(':wilma-application:wilma-common')
   compile 'com.google.guava:guava:18.0'
+  compile 'org.json:json:20180813'
   compile "$javaxServletApi"
 }
