several condition types added (need testing)

--- a/wilma-application/build.gradle
+++ b/wilma-application/build.gradle
@@ -57,11 +57,12 @@ task deleteRelease(type: Delete) {
 
 def myCopySpec = project.copySpec {
    from(rootProject.rootDir.absolutePath + '/wilma-application/modules/wilma-engine/') {
-     include 'wilma.conf.properties'
-     include 'readme.txt'
-     include 'stubConfig.xml'
-     include 'config/condition-checkers/ExampleConditionChecker.java'
-     include 'config/formatters/ExampleTemplateFormatter.java'
+       include 'wilma.conf.properties'
+       include 'readme.txt'
+       include 'stubConfig.xml'
+       include 'stubConfig.json'
+       include 'config/condition-checkers/ExampleConditionChecker.java'
+       include 'config/formatters/ExampleTemplateFormatter.java'
    }
    from(rootProject.rootDir.absolutePath + '/wilma-application/modules/wilma-engine/build/libs/') {
      include "wilma-$wilmaVersion.$buildNumber" + '.jar'
