--- a/wilma-application/modules/wilma-stub-configuration-parser/src/main/resources/StubConfig.json
+++ b/wilma-application/modules/wilma-stub-configuration-parser/src/main/resources/StubConfig.json
@@ -228,9 +228,8 @@
           "type": "object",
           "properties": {
             "not": {
-              "type": "array",
-              "items": {
-                "oneOf": [
+              "type": "object",
+              "oneOf": [
                   {
                     "$ref": "#/definitions/conditionDefinition"
                   },
@@ -240,12 +239,13 @@
                   {
                     "$ref": "#/definitions/booleanConditionDefinition"
                   }
-                ]
-              },
-              "minItems": 1
+              ]
             }
           },
-          "additionalProperties": false
+          "additionalProperties": false,
+          "required": [
+            "not"
+          ]
         }
       ]
     },
