eliminate templateFormatter term form most of the cases favouring responseFormatter

--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -101,8 +101,8 @@ stub.template.path=config/templates
 # Relative path of the stub condition checker classes folder from project root.
 stub.condition.checker.path=config/condition-checkers
 
-# Relative path of the stub template formatter classes folder from project root.
-stub.template.formatter.path=config/formatters
+# Relative path of the stub response formatter classes folder from project root.
+stub.response.formatter.path=config/formatters
 
 # Relative path of the stub interceptor classes folder from project root.
 stub.interceptor.path=config/interceptors
