--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -83,11 +83,8 @@ message.marking=off
 # Relative folder path of the stub descriptor XML configuration files from project root.
 stub.descriptors.path=
 
-# Extension pattern of the stub descriptor XML configuration files (it could be a specific file or *.xml)
-stub.descriptors.pattern=stubConfig.xml
-
-# Use experimental JSON configuration stub descriptors, must be 0, when it is 1, Wilma is not working properly
-stub.descriptors.experimental.json=1
+# Extension pattern of the stub descriptor JSON configuration files (it could be a specific file or *.json)
+stub.descriptors.pattern=stubConfig.json
 
 # Relative folder path of the cached stub descriptor XML configuration files from project root.
 stub.descriptors.cache.path=config/cache/stub_descriptors
