further functional test fixes

--- a/wilma-application/modules/wilma-stub-configuration-parser/src/main/resources/StubConfig.json
+++ b/wilma-application/modules/wilma-stub-configuration-parser/src/main/resources/StubConfig.json
@@ -349,15 +349,7 @@
         },
         "mimeType": {
           "description": "Describes the response content type",
-          "type": "string",
-          "enum": [
-            "text/plain",
-            "text/html",
-            "text/xml",
-            "application/xml",
-            "application/soap+xml",
-            "application/json"
-          ]
+          "type": "string"
         },
         "templateName": {
           "$ref": "#/definitions/uniqueNameDefinition"
