--- a/wilma-functionaltest/resources/stub/JSON/stubConfigWithJson.json
+++ b/wilma-functionaltest/resources/stub/JSON/stubConfigWithJson.json
@@ -28,7 +28,7 @@
           "responseFormatterSet": [
             {
               "responseFormatter": {
-                "class": "JsonResourceFormatter",
+                "class": "JsonResponseFormatter",
                 "parameters": [
                   {
                     "name": "name",
