--- a/wilma-functionaltest/resources/stub/TC3/stubConfig.json
+++ b/wilma-functionaltest/resources/stub/TC3/stubConfig.json
@@ -26,7 +26,7 @@
       {
         "name": "dialog-descriptor1",
         "usage": "always",
-        "validityValue": 2
+        "validityValue": 2,
         "comment": "random comment",
         "conditionDescriptor": {
           "condition": {
