func test further clean-up

--- a/wilma-functionaltest/resources/switch/stubConfigDDminus.json
+++ b/wilma-functionaltest/resources/switch/stubConfigDDminus.json
@@ -7,7 +7,7 @@
         "comment": "random comment",
         "conditionDescriptor": {
           "condition": {
-            "class": "AlwaysTrueChecker"
+            "class": "AlwaysFalseChecker"
           }
         },
         "responseDescriptor": {
