--- a/wilma-functionaltest/resources/stub/TC8/stubConfig.json
+++ b/wilma-functionaltest/resources/stub/TC8/stubConfig.json
@@ -29,7 +29,7 @@
       {
         "name": "template",
         "type": "xml",
-        "resource": "<xml version=\"1.0\" encoding=\"UTF-8\"?><tag>Page Not Found Error</tag>"
+        "resource": "<?xml version=\"1.0\" encoding=\"UTF-8\"?><tag>Page Not Found Error</tag>"
       }
     ]
   }
