fine tuning of json schema

--- a/wilma-application/modules/wilma-stub-configuration-parser/src/main/resources/StubConfig.json
+++ b/wilma-application/modules/wilma-stub-configuration-parser/src/main/resources/StubConfig.json
@@ -537,8 +537,7 @@
         "additionalProperties": false,
         "required": [
           "name",
-          "class",
-          "conditionDescriptor"
+          "class"
         ]
       },
       "minItems": 1,
